--- a/_blog.yml
+++ b/_blog.yml
@@ -1772,3 +1772,17 @@
   tags:
     - guide
     - audio
+
+- local: peft
+  title: "🤗 PEFT: Parameter-Efficient Fine-Tuning of Billion-Scale Models on Low-Resource Hardware"
+  author: smangrul
+  thumbnail: blog/assets/130_peft/thumbnail.png
+  date: February 10, 2023
+  tags:
+    - guide
+    - nlp
+    - cv
+    - multimodal
+    - fine-tuning
+    - community
+    - dreambooth
