--- a/_blog.yml
+++ b/_blog.yml
@@ -191,6 +191,7 @@
   date: March 23, 2021
   tags:
     - partnerships
+    - aws
 
 - local: big-bird
   title: "Understanding BigBird's Block Sparse Attention"
@@ -219,6 +220,7 @@
   tags:
     - guide
     - partnerships
+    - aws
     - nlp
 
 - local: accelerate-library
@@ -237,6 +239,8 @@
   tags:
     - guide
     - nlp
+    - partnerships
+    - intel
 
 - local: gradio
   title: "Using & Mixing Hugging Face Models with Gradio 2.0"
@@ -272,6 +276,7 @@
   tags:
     - guide
     - partnerships
+    - aws
 
 - local: spacy
   title: "Welcome spaCy to the 🤗 Hub"
@@ -386,6 +391,8 @@
   thumbnail: /blog/assets/35_bert_cpu_scaling_part_2/openmp.png
   date: November 4, 2021
   tags:
+    - partnerships
+    - intel
     - guide
     - nlp
 
@@ -421,6 +428,7 @@
   thumbnail: /blog/assets/38_getting_started_graphcore/graphcore_1.png
   date: November 30, 2021
   tags:
+    - partnerships
     - graphcore
     - guide
 
@@ -481,6 +489,7 @@
   date: January 11, 2022
   tags:
     - partnerships
+    - aws
     - guide
     - nlp
 
@@ -582,6 +591,7 @@
   date: March 16, 2022
   tags:
     - partnerships
+    - aws
     - guide
     - nlp
 
@@ -1602,6 +1612,7 @@
     - guide
     - intel
     - hardware
+    - partnerships
 
 - local: ml-for-games-1
   title: "AI for Game Development: Creating a Farming Game in 5 Days. Part 1"
@@ -1745,6 +1756,7 @@
     - guide
     - intel
     - hardware
+    - partnerships
 
 - local: aivsai
   title: "Introducing ⚔️ AI vs. AI ⚔️ a deep reinforcement learning multi-agents competition system"
@@ -1797,3 +1809,14 @@
     - nlp
     - cv
     - multimodal
+
+- local: aws-partnership
+  title: "Hugging Face and AWS partner to make AI more accessible"
+  author: jeffboudier
+  thumbnail: /blog/assets/131_aws-partnership/aws-partnership-thumbnail.png
+  date: February 21, 2023
+  tags:
+    - partnerships
+    - aws
+    - nlp
+    - cv
