red teaming blog

--- a/_blog.yml
+++ b/_blog.yml
@@ -1685,3 +1685,16 @@
     - community
     - guide
     - game-dev
+
+- local: red-teaming
+  title: "Red-Teaming Large Language Models"
+  author: nazneen
+  thumbnail: /blog/assets/red-teaming/thumbnail.png
+  date: February 22, 2023
+  tags:
+    - llms
+    - rlhf
+    - red-teaming
+    - chatgpt
+    - safety
+    - alignment
