--- a/_blog.yml
+++ b/_blog.yml
@@ -1820,3 +1820,14 @@
     - aws
     - nlp
     - cv
+
+- local: fast-mac-diffusion
+  title: "Fast Stable Diffusion on your Mac with Swift Diffusers"
+  author: pcuenq
+  thumbnail: /blog/assets/fast-mac-diffusion/thumbnail.png
+  date: February 23, 2023
+  tags:
+    - coreml
+    - diffusers
+    - stable-diffusion
+    - diffusion
