--- a/_events.yml
+++ b/_events.yml
@@ -3,6 +3,11 @@
 #                                             (e.g. specifying event date range like Jan 24 to Feb 7, 2022)
 
 
+- name: How to build Machine Learning apps with Hugging Face
+  link: https://www.eventbrite.com/e/building-machine-learning-apps-with-hugging-facellms-to-diffusion-modeling-tickets-565837343727?aff=HF
+  date: Mar 23, 2023
+  description: Free workshop hosted by DeepLearning.AI for developers learn how to build with ML without the Ops.
+
 - name: How Witty Works leverages Hugging Face to scale inclusive language?
   link: https://www.eventbrite.com/e/how-witty-works-leverages-hugging-face-to-scale-inclusive-language-tickets-503429429977
   date: Feb 16, 2023
