Machine learning for disaster response blog post (#865)
Co-authored-by: Alara Dirik <8944735+alaradirik@users.noreply.github.com>
Co-authored-by: Pedro Cuenca <pedro@huggingface.co>
Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

--- a/_blog.yml
+++ b/_blog.yml
@@ -1857,6 +1857,7 @@
     - chatgpt
     - safety
     - alignment
+
     
 - local: classification-use-cases
   title: "Leveraging Hugging Face for complex text classification use cases"
@@ -1874,3 +1875,14 @@
   tags:
     - ethics
     - diffusers
+
+
+- local: ml-disaster
+  title: "Using Machine Learning to Aid Survivors and Race through Time"
+  author: merve
+  thumbnail: /blog/assets/using-ml-for-disasters/thumbnail.png
+  date: March 3, 2023
+  tags:
+    - nlp
+    - transformers
+    - object-detection
