--- a/_blog.yml
+++ b/_blog.yml
@@ -1876,6 +1876,13 @@
     - ethics
     - diffusers
 
+- local: controlnet
+  title: "ControlNet in Diffusers 🧨"
+  author: sayakpaul
+  thumbnail: /blog/assets/controlnet/thumbnail.png
+  date: March 3, 2023
+  tags:
+    - diffusers
 
 - local: using-ml-for-disasters
   title: "Using Machine Learning to Aid Survivors and Race through Time"
