--- a/_events.yml
+++ b/_events.yml
@@ -7,6 +7,11 @@
   date: Mar 23, 2023
   description: Free workshop hosted by DeepLearning.AI for developers learn how to build with ML without the Ops.
 
+- name: "Ethics & Society: Making Intellicence – Ethical Values in ML Benchmarks"
+   link: https://hf.co/ethics
+   date: Mar 13, 2023
+   description: A Discord Q&A with Leif Hancox-Li, PhD and Borhane Blili-Hamelin, PhD!
+
 - name: (IRL San Francisco) Building Generative AI Products with AWS and HuggingFace
   link: https://aws-startup-lofts.com/amer/loft/san-francisco/e/c77d4/ml-startup-tech-talk-building-generative-ai-products
   date: Mar 8, 2023
