Add peft trl (#912)
* add v1

* add content

* add thumbnail

* update content

* fix images

* fix image

* fix image

* final fix image

* final fix

* updates

* updates

* add authors

* change authors

* add content

* final content

* change thumbnail

* Apply suggestions from code review

Co-authored-by: lewtun <lewis.c.tunstall@gmail.com>

* Apply suggestions from code review

Co-authored-by: Kashif Rasul <kashif.rasul@gmail.com>

* fix note on `AdamW`

* update image paths

* Update _blog.yml

Co-authored-by: Leandro von Werra <lvwerra@users.noreply.github.com>

---------

Co-authored-by: lewtun <lewis.c.tunstall@gmail.com>
Co-authored-by: Kashif Rasul <kashif.rasul@gmail.com>
Co-authored-by: Leandro von Werra <lvwerra@users.noreply.github.com>

--- a/_blog.yml
+++ b/_blog.yml
@@ -1904,3 +1904,12 @@
     - guide
     - partnerships
     - multimodal
+
+- local: trl-peft
+  title: "Fine-tuning 20B LLMs with RLHF on a 24GB consumer GPU"
+  author: edbeeching
+  thumbnail: /blog/assets/133_trl_peft/thumbnail.png
+  date: March 9, 2023
+  tags:
+    - rl
+    - nlp
