--- a/_blog.yml
+++ b/_blog.yml
@@ -1917,7 +1917,7 @@
 - local: fl-with-flower
   title: "Federated Learning using Hugging Face and Flower"
   author: charlesbvll
-  thumbnail: /blog/assets/fl-with-flower/thumbnail.gif
+  thumbnail: /blog/assets/fl-with-flower/thumbnail.png
   date: March 10, 2023
   tags:
     - nlp
