--- a/_blog.yml
+++ b/_blog.yml
@@ -1512,6 +1512,7 @@
   date: December 1, 2022
   tags:
     - research
+    - time-series
 
 - local: diffusers-coreml
   title: "Using Stable Diffusion with Core ML on Apple Silicon"
@@ -1922,3 +1923,4 @@
   tags:
     - guide
     - research
+    - time-series
