--- a/.github/workflows/validate-yaml.yml
+++ b/.github/workflows/validate-yaml.yml
@@ -4,11 +4,11 @@ on:
     branches:
       - main
     paths: 
-      - "_*.yml"
+      - "**/_*.yml"
       - "schemas/_*.schema.yml"
   pull_request:
     paths: 
-      - "_*.yml"
+      - "**/_*.yml"
       - "schemas/_*.schema.yml"
 
 jobs:
@@ -31,3 +31,19 @@ jobs:
       with:
         schema: schemas/_tags.schema.yml
         target: _tags.yml
+    # Chinese translation of blog
+    - name: "Validate _events.yml (chinese translation)"
+      uses: nrkno/yaml-schema-validator-github-action@v4
+      with:
+        schema: schemas/_events.schema.yml
+        target: cn/_events.yml
+    - name: "Validate _blog.yml (chinese translation)"
+      uses: nrkno/yaml-schema-validator-github-action@v4
+      with:
+        schema: schemas/_blog.schema.yml
+        target: cn/_blog.yml
+    - name: "Validate _tags.yml (chinese translation)"
+      uses: nrkno/yaml-schema-validator-github-action@v4
+      with:
+        schema: schemas/_tags.schema.yml
+        target: cn/_tags.yml
