--- a/_events.yml
+++ b/_events.yml
@@ -2,6 +2,10 @@
 # "date_formatted" attribute is optional if you want to control the format/look of "date" on hf.co
 #                                             (e.g. specifying event date range like Jan 24 to Feb 7, 2022)
 
+- name: Meet-up on Generative AI
+  link: https://sites.google.com/huggingface.co/generative-ai-meetup
+  date: Apr 29, 2023
+  description: Free meet-up in collaboration with NVIDIA to discuss the bleeding egde from the world of Generative AI. 
 - name: How to build Machine Learning apps with Hugging Face
   link: https://www.eventbrite.com/e/building-machine-learning-apps-with-hugging-facellms-to-diffusion-modeling-tickets-565837343727?aff=HF
   date: Mar 23, 2023
