--- a/_events.yml
+++ b/_events.yml
@@ -1,7 +1,7 @@
 # "date" attribute should be end date of an event in `Mon DD, YYYY` format (e.g. Feb 3, 2014)
 # "date_formatted" attribute is optional if you want to control the format/look of "date" on hf.co
 #                                             (e.g. specifying event date range like Jan 24 to Feb 7, 2022)
-- name: Open Source AI meetup with 🤗 CEO
+- name: (IRL San Francisco) Open Source AI meetup with 🤗 CEO
   link: https://partiful.com/e/fE0XH0PrSOZB9ezYuFbW
   date: Mar 31, 2023
   description: 🤗 CEO Clement Delangue & team members are heading to San Francisco to celebrate the open-source AI community. 
