Add SFO event (#943)
* Add SFO event

* add IRL title

* correct chronoly

--- a/_events.yml
+++ b/_events.yml
@@ -6,6 +6,11 @@
   date: Apr 14 to May 1, 2023
   description: This is a community event to develop applications for examples in scikit-learn documentation using Gradio.
 
+- name: (IRL San Francisco) Open Source AI meetup with 🤗 CEO
+  link: https://partiful.com/e/fE0XH0PrSOZB9ezYuFbW
+  date: Mar 31, 2023
+  description: 🤗 CEO Clement Delangue & team members are heading to San Francisco to celebrate the open-source AI community. 
+
 - name: Keras DreamBooth Community Sprint
   link: https://huggingface.co/keras-dreambooth
   date: Mar 6 to Apr 1, 2023
