--- a/zh/_events.yml
+++ b/zh/_events.yml
@@ -2,241 +2,55 @@
 # "date_formatted" attribute is optional if you want to control the format/look of "date" on hf.co
 #                                             (e.g. specifying event date range like Jan 24 to Feb 7, 2022)
 
-- name: How to build Machine Learning apps with Hugging Face
-  link: https://www.eventbrite.com/e/building-machine-learning-apps-with-hugging-facellms-to-diffusion-modeling-tickets-565837343727?aff=HF
-  date: Mar 23, 2023
-  description: Free workshop hosted by DeepLearning.AI for developers learn how to build with ML without the Ops.
+- name: 造个 🤖️ 去瀛海威广场聚会啦！
+  link: https://mp.weixin.qq.com/s/M5vjicNG1uBdCQzQtQU9yw
+  date: Mar 19, 2023
+  date_formatted: Mar 17 to Mar 19, 2023
+  description: 百姓 AI 和 Hugging Face 联合推出的机器人黑客松活动。
 
-- name: (IRL San Francisco) Building Generative AI Products with AWS and HuggingFace
-  link: https://aws-startup-lofts.com/amer/loft/san-francisco/e/c77d4/ml-startup-tech-talk-building-generative-ai-products
-  date: Mar 8, 2023
-  description: Free event in downtown SF hosted by AWS to learn how to use Hugging Face with SageMaker
-  
-- name: Keras Dreambooth Event Kick-off Session with talks on diffusers & KerasCV
-  link: https://www.youtube.com/watch?v=Njt8BuSW-TQ&ab_channel=HuggingFace
-  date: Mar 5, 2023
-  description: Free talks with Francois Chollet, Nataniel Ruiz, Apolinario Passos and Merve Noyan.
+- name: 飞桨黑客马拉松第四期：AIGC 趣味创意赛
+  link: https://aistudio.baidu.com/aistudio/competition/detail/860/0/introduction
+  date: May 20, 2023
+  date_formatted: Feb 28 to May 20, 2023
+  description: 与飞浆联合推出的，使用扩散模型并结合 LoRA、DreamBooth 等技术进行模型微调的黑客松活动。
 
-- name: How Witty Works leverages Hugging Face to scale inclusive language?
-  link: https://www.eventbrite.com/e/how-witty-works-leverages-hugging-face-to-scale-inclusive-language-tickets-503429429977
-  date: Feb 16, 2023
-  description: This webinar will teach you how Witty Works leverages Hugging Face for text classification use cases.
+- name: Hugging Face DreamBooth 微调黑客松
+  link: https://www.heywhale.com/home/competition/63bbfb98de6c0e9cdb0d9dd5
+  date: Feb 10, 2023
+  date_formatted: Jan 9 to Feb 10, 2023
+  description: 与和鲸社区共同推出，助力中国社区成员参与全球的 DreamBooth 微调黑客松活动。
 
-- name: NLP with Transformers Reading Group
-  link: https://discord.gg/fabCGvFq?event=1050810825335644243
-  date: Dec 15, 2022
-  description: Want to learn how to apply transformers to your use-cases and how to contribute to open-source projects? Join our reading group!
+- name: Hugging Face 社区投稿
+  link: https://bit.ly/hf-tougao
+  date: Feb 9, 2023
+  description: 我们正在努力丰富中文社区的内容生态，希望邀请社区的成员们共同添砖加瓦，共同推进让 AI 惠及大众。
 
-- name: Few-Shot Learning in Production
-  link: https://discord.gg/fabCGvFq?event=1049707836755693628
+- name: 抱抱脸本地化小组志愿者招募
+  link: https://bit.ly/baobaolian-new
+  date: Feb 9, 2023
+  description: 参与翻译 Hugging Face 最新课程、视频、博客文章等内容。
+
+- name: 直播 (回放)：“生产环境中的小样本学习” 研讨会
+  link: https://mp.weixin.qq.com/s/uJW63vyDq3igP8Rw_3EEwA
   date: Dec 14, 2022
-  description: Join researchers from Hugging Face and Intel Labs for a workshop about training and deploying few-shot language models. 
+  description: 由 Hugging Face 和 Intel AI 的研究员共同出席，带领大家训练和部署一个小样本的语言模型。
 
-- name: Reinforcement Learning from Human Feedback From Zero to ChatGPT
-  link: https://youtu.be/EAd4oQtEJOM
+- name: 直播 (回放)：ChatGPT 背后的“功臣” —— RLHF 介绍
+  link: https://mp.weixin.qq.com/s/iaKOp1F-nJlgSbRF2h0r_g
   date: Dec 13, 2022
-  description: We will cover the basics of Reinforcement Learning from Human Feedback (RLHF) and how this technology is being used to enable state-of-the-art ML tools like ChatGPT
-  
-- name: Whisper Fine Tuning Sprint
-  link: https://discuss.huggingface.co/t/open-to-the-community-whisper-fine-tuning-event/26681
-  date: Dec 5, 2022
-  description: Help us bring SoTA Whisper architecture to 70+ languages. Join our Whisper fin-tuning sprint from Dec 5th - 19th!
+  description: RLHF，从人类反馈中强化学习，它是 ChatGPT 背后的“功臣”。
 
-- name: NLP with Transformers Reading Group
-  link: https://discord.com/events/879548962464493619/1042396704802091048
+- name: 直播 (回放)：Whisper 微调冲刺直播
+  link: https://mp.weixin.qq.com/s/7YQiUacdH7SwLGAWnSwDzw
+  date: Dec 6, 2022
+  description: 邀请 OpenAI 和 MetaAI 团队成员介绍 Whisper 模型和 VoxPopuli 数据集的最新研究。
+
+- name: 直播 (回放)：扩散模型分享
+  link: https://space.bilibili.com/1740664937/channel/seriesdetail?sid=2839427&ctype=0
   date: Dec 1, 2022
-  description: Want to learn how to apply transformers to your use-cases and how to contribute to open-source projects? Join our reading group!
+  description: 为了支持扩散模型课程的发布，我们邀请了重磅嘉宾做了一次围绕扩散模型的分享。
 
-- name: Diffusion Models Live Event 🧨
-  link: https://www.youtube.com/watch?v=5gPS_Tn9rlg
-  date: Nov 30, 2022
-  description: Live talks from the creators of Stable Diffusion and many more!
-
-- name: NLP with Transformers Reading Group
-  link: https://discord.com/events/879548962464493619/1039565337420648458
-  date: Nov 17, 2022
-  description: Want to learn how to apply transformers to your use-cases and how to contribute to open-source projects? Join our reading group!
-
-- name: NLP with Transformers Reading Group
-  link: https://discord.com/events/879548962464493619/1029013213318217848
-  date: Oct 20, 2022
-  description: Want to learn how to apply transformers to your use-cases and how to contribute to open-source projects? Join our reading group!
-
-- name: Efficient Few-Shot Learning with Sentence Transformers
-  link: https://discord.com/events/879548962464493619/1027893081741201508
-  date: Oct 18, 2022
-  description: Join researchers from Hugging Face and Intel Labs for a presentation about their recent work on SetFit, a new framework for few-shot learning with language models. 
-
-- name: Hugging Face Inference Endpoints | 🤗 Announcement and demo
-  link: https://app.livestorm.co/hugging-face/hugging-face-inference-endpoints?type=detailed
-  date: Sep 27, 2022
-  description: "Transformers in production: SOLVED ✅"
-
-- name: How Synapse Medicine leverages Hugging Face to improve medication safety
-  link: https://www.eventbrite.com/e/how-synapse-medicine-leverages-hugging-face-to-improve-medication-safety-tickets-328906848237
-  date: Sep 20, 2022
-  description: Learn how Synapse Medicine leverages Hugging Face to improve medication safety!  
-
-- name: Hugging Face AI Hardware Summit Workshop
-  link: https://www.kisacoresearch.com/ai-hardware-summit-agenda
-  date: Sep 13, 2022
-  description: Learn from Hugging Face experts how to use Graphcore IPUs, Habana Gaudi AI Hardware Accelerators with Optimum!  
-  
-- name: fastai X Hugging Face Group 2022
-  link: https://huggingface.co/hugginglearners
-  date: Jul 15, 2022
-  date_formatted: Jun 15 to Jul 15, 2022
-  description: Share Vision and Text pre-trained fastai Learners with the community.
-
-- name: Twitter Space with ONNX RunTime
-  link: https://twitter.com/i/spaces/1jMJgeQZjrYKL
-  date: Jun 22, 2022
-  description: Join our live discussion with the ONNX RunTime team about accelerating Transformers with Optimum!
-  
-- name: Data2vec Reading Group
-  link: https://huggingface.co/join/discord
-  date: Jun 22, 2022
-  description: Join us to talk about data2vec, a model that works across different modalities - text, audio, and images.
-
-- name: Hugging Face VIP Party at the AI Summit London
-  link: https://www.addevent.com/event/Rt13780880
-  date: Jun 15, 2022
-  description: Come meet Hugging Face at the Skylight Bar on the roof of Tobacco Dock during AI Summit London! 6pm-9pm
-
-- name: Masader Hackathon
-  link: https://docs.google.com/document/d/1Oc-UhWByRnrPk4Orh2bVenV9PzxkGRjkML9ebBqn9hU/edit?usp=sharing
-  date: Jun 10, 2022
-  description: A sprint to add 125 Arabic NLP datasets to Masader, https://arbml.github.io/masader/,  5pm-7pm Saudi Arabia time.
-
-- name: Introduction to Hugging Face Ecosystem at PyData Paris
-  link: https://www.meetup.com/PyData-Paris/events/286206845/
-  date: June 9, 2022
-  description: An extensive introduction to the open-source ecosystem in Hugging Face.
-
-- name: Computer Vision with Hugging Face
-  link: https://youtu.be/oL-xmufhZM8
-  date: June 8, 2022
-  description: In this session, Niels Rogge walks us through the tools and architectures used to train computer vision models using Hugging Face.
-  
-- name: How to Teach Open-Source Machine Learning Tools
-  link: https://www.eventbrite.com/e/how-to-teach-open-source-machine-learning-tools-tickets-310980931337
-  date: Jun 6, 2022
-  description: Learn how the open-source ecosystem can be used in your machine learning and data science classes.
-  
-- name: Accelerate BERT Inference with Knowledge Distillation & AWS Inferentia
-  link: https://app.livestorm.co/hugging-face/accelerate-bert-inference-with-knowledge-distillation-and-aws-inferentia?type=detailed
-  date: Apr 13, 2022
-  description: Accelerate BERT Inference with knowledge distillation & compiling using Hugging Face Transformers, Amazon SageMaker & AWS Inferentia.
-
-- name: Computer Vision Study Group Paper Reading Session on "How Do Vision Transformers Work?"
-  link: https://discord.gg/EmEpESpn?event=957940949261115402
-  date: Apr 5, 2022
-  description: Discussion on paper "How Do Vision Transformers Work?".
-
-- name: NLP in Spanish Hackathon
-  link: https://www.eventbrite.com/e/registro-hackathon-de-pln-en-espanol-273014111557
-  date: Mar 31, 2022
-  date_formatted: Mar 14 to Mar 31, 2022
-  description: Largest Hackathon ever of NLP in Spanish.
-
-- name: Chasing the wrong benchmarks in Machine Learning, How it will fail in production
-  link: https://eveeno.com/ai-academy-kickoff
-  date: Mar 22, 2022
-  description: Niels Reimers will present his view on chasing wrong benchmarks in ML and how they will fail in production.
-
-- name: NLP with TF Keras and HF Transformers with Merve Noyan
-  link: https://www.youtube.com/watch?v=IBaDGxgY3Po&ab_channel=Weights%26Biases
-  date: Feb 16, 2022
-  description: Learn about how NLP can be done with TensorFlow and Transformers.
-
-- name: Robust Speech Recognition Challenge
-  link: https://discuss.huggingface.co/t/open-to-the-community-robust-speech-recognition-challenge/13614
-  date: Feb 7, 2022
-  date_formatted: Jan 24 to Feb 7, 2022
-  description: Community event in which robust speech recognition systems in many languages are created.
-  
-- name: Hub Featureton
-  link: https://www.youtube.com/watch?v=gAEeiFR7O0Q&ab_channel=HuggingFace
-  date: Feb 3, 2022
-  description: Would you like to know all the things you can do with the Hub? This event is for you! During the webinar, we'll go through some amazing features the Hugging Face team has been working on.
-  
-- name: XLS-R, Large-Scale Cross-lingual Speech Representation Learning on 128 Languages
-  link: https://www.youtube.com/watch?v=ic_J7ZCROBM&ab_channel=HuggingFace
-  date: Jan 21, 2022
-  description: Changan Wang, from Meta AI Research, is one of the authors of the XLS-R, a large-scale model for cross-lingual speech representation learning based on wav2vec.
-
-- name: The Common Voice Dataset
-  link: https://www.youtube.com/watch?v=Vvn984QmAVg&ab_channel=HuggingFace
-  date: Jan 21, 2022
-  description: Gabriel Habayeb, from Mozilla Common Voice, will join us to speak about the Common Voice Dataset.
-
-- name: ML for Audio Study Group - ML4Audio - pyctcdecode, A simple and fast speech-to-text prediction decoding algorithm
-  link: https://www.youtube.com/watch?v=CDuvVL0z_xk&ab_channel=HuggingFace
-  date: Jan 19, 2022
-  description: Watch a presentation about pyctcdecode, a fast and feature-rich CTC beam search decoder for speech recognition.
-
-- name: Intro to Transfer Learning, end-to-end deployment with TFX, and demo with Streamlit
-  link: https://www.youtube.com/watch?v=y9qy7lxXl-c&ab_channel=TensorFlowUserGroupCasablanca
-  date: Jan 8, 2022
-  date_formatted: Jan 7 & 8, 2022
-  description: Are you a TF user and would like to learn about Transformers and building cool demos? This is for you!
-
-- name: ML for Audio Study Group - Text to Speech Deep Dive
-  link: https://www.youtube.com/watch?v=aLBedWj-5CQ&ab_channel=HuggingFace
-  date: Jan 4, 2022
-  description: Vatsal and VB provide a high level overview of how TTS is solved and share more about the history of the domain.
-  
-- name: ML for Audio Study Group - Intro to Audio and ASR Deep Dive
-  link: https://www.youtube.com/watch?v=D-MH6YjuIlE&ab_channel=HuggingFace
-  date: Dec 21, 2021
-  description: Watch a high level overview of audio data and its challenges and learn about transcribing audio files.
-  
-- name: GDG Cloud San Francisco DevFest - BigScience
-  link: https://youtu.be/-euoEOpfUIk?t=5695
-  date: Dec 18, 2021
-  description: Learn about the BigScience project, a one year research workshop on large multilingual datasets and language models.
-
-- name: Pretraining Language Models & CodeParrot
-  link: https://www.youtube.com/watch?v=ExUR7w6xe94&ab_channel=HuggingFace
-  date: Dec 17, 2021
-  description: Leandro and Merve explain how to pre-train language models and Code Parrot, a model that can write code.
-
-- name: ML for Audio Study Group - Kick Off
-  link: https://www.youtube.com/watch?v=cAviRhkqdnc&ab_channel=HuggingFace
-  date: Dec 14, 2021
-  description: Intro to ML for Audio. Learn about Automatic Speech Recognition and Text to Speech.
-
-- name: Question Answering workshop
-  link: https://www.youtube.com/watch?v=Ihgk8kGLpIE&ab_channel=HuggingFace
-  date: Dec 10, 2021
-  description: Course special session where Lewis and Merve will go through notebooks, course material and answer your questions.
-
-- name: On Sentiments and Biases
-  link: https://www.youtube.com/watch?v=0K5ybetv-dA&ab_channel=HuggingFace
-  date: Dec 8, 2021
-  description: Join Merve & Vincent in this talk on Sentiments and Biases in Hugging Face models! 
-
-- name: Implementing DietNeRF with JAX and Flax.
-  link: https://www.youtube.com/watch?v=A9iefUXkvQU&t=1s&ab_channel=HuggingFace
-  date: Nov 30, 2021
-  description: Learn about NeRF, JAX+Flax, 3D reconstruction, HF Spaces, and more!
-
-- name: Course launch event!
-  link: https://www.youtube.com/playlist?list=PLo2EIpI_JMQvcXKx5RFReyg6Qd2UICAif
-  date: Nov 15, 2021
-  description: Talks from Thom Wolf, Margaret Mitchell, Jay Alammar, and many more!
-
-- name: Open Source Office Hours
-  link: https://www.youtube.com/watch?v=VWOHu_Hg0Pc
-  date: Nov 8, 2021
-  description: In this 30 minutes session the team will share the latest updates from our open source tools and answer questions from the community.
-
-- name: T0 Discussion with Victor Sanh
-  link: https://www.youtube.com/watch?v=Oy49SCW_Xpw&ab_channel=HuggingFace
-  date: Nov 5, 2021
-  description: Learn about the T0, a model for zero-show task generalization
-
-- name: NLP with Transformers and the Hugging Face Ecosystem 🤗
-  link: https://www.mlt.ai/hands-on-transformers-workshop
-  date: Oct 22, 2021
-  description: In this workshop, learn the core concepts behind Transformers and how to train these models in the Hugging Face ecosystem.
+- name: Hugging Face ❤️ arXiv 社区冲刺活动
+  link: https://mp.weixin.qq.com/s/twygNE7QpZEGjr-baRskPQ
+  date: Nov 25, 2022
+  description: 将一些 arXiv 论文中提及的开源模型制作成 Hugging Face Space 应用来进行展示，提升易用性。
