--- a/zh/_tags.yml
+++ b/zh/_tags.yml
@@ -1,20 +1,20 @@
 - value: analysis
-  label: analysis
+  label: 分析和解读
 
 - value: community
-  label: community
+  label: 社区动态
 
 - value: guide
-  label: guide
+  label: 教程
 
 - value: open-source-collab
-  label: open source collab
+  label: 开源协作
 
 - value: partnerships
-  label: partnerships
+  label: 合作伙伴
 
 - value: research
-  label: research
+  label: 科研相关
 
 - value: nlp
   label: NLP
@@ -29,10 +29,10 @@
   label: RL
 
 - value: ethics
-  label: ethics
+  label: AI 伦理
 
 - value: diffusion
-  label: Diffusion
+  label: 扩散模型
 
 - value: game-dev
-  label: Game Development
+  label: 游戏开发
