--- a/_blog.yml
+++ b/_blog.yml
@@ -1925,7 +1925,7 @@
     - research
     - time-series
     
-- local: notebooks-hub.md
+- local: notebooks-hub
   title: "Jupyter X Hugging Face"
   author: davanstrien
   thumbnail: /blog/assets/135_notebooks-hub/before_afternotebook renderıng.png
