--- a/_blog.yml
+++ b/_blog.yml
@@ -1924,3 +1924,13 @@
     - guide
     - research
     - time-series
+    
+- local: notebooks-hub
+  title: "Jupyter X Hugging Face"
+  author: davanstrien
+  thumbnail: /blog/assets/135_notebooks-hub/before_afternotebook renderıng.png
+  date: March 23, 2023
+  tags:
+    - partnerships
+    - announcement
+
