--- a/_blog.yml
+++ b/_blog.yml
@@ -1933,3 +1933,13 @@
   tags:
     - partnerships
     - announcement
+
+- local: train-your-controlnet
+  title: "Train your ControlNet with diffusers"
+  author: davanstrien
+  thumbnail: /blog/assets/136_train-your-controlnet/thumbnail.png
+  date: March 24, 2023
+  tags:
+    - guide
+    - diffusion
+    - stable-diffusion
