--- a/_blog.yml
+++ b/_blog.yml
@@ -1936,7 +1936,7 @@
 
 - local: train-your-controlnet
   title: "Train your ControlNet with diffusers"
-  author: davanstrien
+  author: multimodalart
   thumbnail: /blog/assets/136_train-your-controlnet/thumbnail.png
   date: March 24, 2023
   tags:
