Nit spelling change

--- a/_blog.yml
+++ b/_blog.yml
@@ -1951,6 +1951,6 @@
   date: March 24, 2023
   tags:
     - guide
-    - open-source-colab
+    - open-source-collab
     - fine-tuning
     - active-learning
