--- a/_blog.yml
+++ b/_blog.yml
@@ -1951,6 +1951,7 @@
   date: March 24, 2023
   tags:
     - guide
+    - transformers
     - open-source-collab
     - fine-tuning
     - active-learning
