Add fl-with-flower post (#919)
* Add fl-with-flower post

* Fix missing newline

* Add thumbnail

* Update date

* Add guest to author section

* Fix typo in thumbnail

* Apply suggestion to fl blog post

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* Update fl-with-flower.md

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* Update fl-with-flower.md

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* Add suggested changes

* Set date to the 24th

* Apply suggestions

* Apply updates to code

---------

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

--- a/_blog.yml
+++ b/_blog.yml
@@ -1943,3 +1943,18 @@
     - guide
     - diffusion
     - stable-diffusion
+
+- local: fl-with-flower
+  title: "Federated Learning using Hugging Face and Flower"
+  author: charlesbvll
+  guest: true
+  thumbnail: /blog/assets/fl-with-flower/thumbnail.png
+  date: March 27, 2023
+  tags:
+    - nlp
+    - transformers
+    - guide
+    - flower
+    - federated-learning
+    - fl
+    - open-source-collab
