New post: stable diffusion inference on Intel CPUs (#935)
* Initial version

* Add OpenVINO

* Add graph

* Add details on jemalloc configuration

* Fix OpenVINO pipe

* Mention bfloat16 for OpenVINO

* Add fixed input shape

* Feedback and cleanup

* Update stable_diffusion_inference_intel.md

Co-authored-by: Ella Charlaix <80481427+echarlaix@users.noreply.github.com>

* Update stable_diffusion_inference_intel.md

Co-authored-by: Ella Charlaix <80481427+echarlaix@users.noreply.github.com>

* Update stable_diffusion_inference_intel.md

Co-authored-by: Julien Chaumond <julien@huggingface.co>

* Update stable_diffusion_inference_intel.md

Co-authored-by: Julien Chaumond <julien@huggingface.co>

* Rename file

* Python formatting

* - Add link to code samples
- OpenVINO cleanup

* - Add sample input for JIT
- Add libiomp
- Add numactl

* Typos

* Typos

* Update blog index

---------

Co-authored-by: Julien Simon <julsimon@huggingface.co>
Co-authored-by: Ella Charlaix <80481427+echarlaix@users.noreply.github.com>
Co-authored-by: Julien Chaumond <julien@huggingface.co>

--- a/_blog.yml
+++ b/_blog.yml
@@ -1958,3 +1958,13 @@
     - federated-learning
     - fl
     - open-source-collab
+
+- local: intel
+  title: "Accelerating Stable Diffusion Inference on Intel CPUs"
+  author: juliensimon
+  thumbnail: /blog/assets/136_stable_diffusion_inference_intel/01.png
+  date: March 28, 2023
+  tags:
+    - hardware
+    - intel
+    - guide
