--- a/zh/_blog.yml
+++ b/zh/_blog.yml
@@ -278,3 +278,11 @@
   date: March 3, 2023
   tags:
     - diffusers
+
+- local: train-your-controlnet
+  title: "使用 diffusers 训练你自己的 ControlNet 🧨"
+  author: multimodalart
+  thumbnail: /blog/assets/136_train-your-controlnet/thumbnail.png
+  date: March 28, 2023
+  tags:
+    - diffusers
