add translation for train-your-controlnet (#971)
* add translation for train-your-controlnet

* Update _blog.yml

* Rename train-your-controlnet-CN.md to train-your-controlnet.md

---------

Co-authored-by: Tiezhen WANG <38108242+xianbaoqian@users.noreply.github.com>

--- a/zh/_blog.yml
+++ b/zh/_blog.yml
@@ -279,6 +279,15 @@
   tags:
     - diffusers
 
+
+- local: train-your-controlnet
+  title: "使用 diffusers 训练你自己的 ControlNet 🧨"
+  author: multimodalart
+  thumbnail: /blog/assets/136_train-your-controlnet/thumbnail.png
+  date: March 28, 2023
+  tags:
+    - diffusers
+
 - local: bloom-inference-optimization
   title: "优化故事: BLOOM 模型推理"
   author: Narsil
@@ -312,3 +321,4 @@
     - llm
     - bloom
     - inference
+
